Bug fix for box height and width . text overlapping fix

--- a/scss/formsflow-custom.scss
+++ b/scss/formsflow-custom.scss
@@ -1,6 +1,6 @@
 .formsflow-button {
-    min-width: 9.313rem;
-    min-height: 2.75rem;
+    // min-width: 9.313rem;
+    // min-height: 2.75rem;
     max-width: 21.438rem;
     line-height: 1;
     letter-spacing: 0rem;
